--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -83,6 +83,10 @@ jobs:
       - name: Setup PNPM
         run: npm i -g pnpm
 
+      - name: Install Dependencies
+        run: pnpm install
+        working-directory: tauri
+
       - name: Build Tauri App
         id: upload-id
         uses: tauri-apps/tauri-action@v0
