--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -62,9 +62,6 @@ jobs:
 
     runs-on: ${{ matrix.os }}
 
-    outputs:
-      release_id: ${{ steps.upload-id.outputs.releaseId }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -95,8 +92,12 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
 
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+        with:
+          workspaces: "./tauri/src-tauri -> target"
+
       - name: Build Tauri App
-        id: upload-id
         uses: tauri-apps/tauri-action@v0
         env:
           TAURI_PRIVATE_KEY: ${{ env.priv_key }}
@@ -128,7 +129,7 @@ jobs:
         uses: actions/github-script@v7
         env:
           REPO: ${{ github.repository }}
-          R_ID: ${{ needs.build.outputs.release_id }}
+          R_ID: ${{ needs.create_release.outputs.RELEASE_ID }}
         with:
           script: |
             const [owner, repo] = process.env.REPO.split("/");
